--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -3,14 +3,15 @@
     text-align: center;
     display: flex;
     justify-content: center;
-  }
+}
   
-  .responseRow > div {
+.responseRow > div {
     display: block;
     width:60px;
     height:60px;
+    border: 1px solid #bbb;
     margin: 4px;
     text-align: center;
     line-height: 60px;
     color:#747bff;
-  }
+}
