Prototype of different colorings per guess

--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -22,3 +22,23 @@
 .validResponse > div {
     background-color:#747bff;
 }
+
+.true {
+    background-color:green;
+}
+
+.false {
+    background-color: red;
+}
+
+.equal {
+    background-color: green;
+}
+
+.less {
+    background-color: aquamarine;
+}
+
+.greater {
+    background-color: aqua;
+}
