Check for potential error with z-axis of rendering

--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -20,7 +20,8 @@
 }
 
 .validResponse > div {
-    background-color:#747bff;
+    /*background-color:#747bff;*/
+    border: 1px solid black;
 }
 
 .true {
