--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+body {
+  background-color: #083e93;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  margin-top:10px;
+  margin-bottom:10px;
+  padding: 4rem;
   text-align: center;
+  background-color: #ffde9a;
+  border-radius: 10px;
 }
 
 .logo {
@@ -46,6 +54,7 @@
   src:url('./fonts/Stardew_Valley.ttf') format('truetype');
 }
 
-.sdv_font {
+.main_title {
   font-family: "SDV_font";
+  margin-top: 5px;
 }
