Edit font and installed ReactSearchAutocomplete before restructuring guessbox

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,8 @@ body {
 
 @font-face {
   font-family:"SDV_font";
-  src:url('./fonts/Stardew_Valley.ttf') format('truetype');
+  /* src:url('./fonts/Stardew_Valley.ttf') format('truetype'); */
+  src:url('./fonts/StardewValley.ttf') format('truetype');
 }
 
 .main_title {
