--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -4,6 +4,7 @@
 .stardewFont {
     font-family: "SDV_font";
     font-size: 1.65em;
+    text-shadow: 1px 1px 1px gray;
 }
 
 .rowLabels {
@@ -62,15 +63,49 @@
 
 .less {
     background-color: #e21411;
-    /*content:url(../assets/noun-arrow-up-6619190.svg);*/
 }
 
 .greater {
     background-color: #e21411;
-    /* content: url(../assets/noun-arrow-down-6619175.svg); */
 }
 
 .partial {
     /* background-color: orange; */
     background-color: #db800d;
+}
+
+.animatedBox {
+    animation: reveal 1.1s ease forwards;
+}
+
+@keyframes reveal {
+    0% {
+        transform: rotateX(0);
+    }
+    45% {
+        transform: rotateX(90deg);
+    }
+    55% {
+        transform: rotateX(90deg);
+    }
+
+    100% {
+        transform: rotateX(0deg);
+    }
+}
+
+.firstBox {
+    animation-delay: 0.2s;
+}
+
+.secondBox {
+    animation-delay: 0.4s;
+}
+
+.thirdBox {
+    animation-delay: 0.6s;
+}
+
+.fourthBox {
+    animation-delay: 0.8s;
 }
