--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -81,6 +81,7 @@
 @keyframes reveal {
     0% {
         transform: rotateX(0);
+        opacity:0;
     }
     45% {
         transform: rotateX(90deg);
