--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,23 +1,30 @@
 .gameEndModal {
-    background: (255,255,255,0.7);
+    background: rgba(255,255,255,0.7);
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 10;
 }
 
 .gameEndModal div {
     max-width: 480px;
-    background: #fff;
+    background: #ffeecc;
     padding: 40px;
     border-radius: 10px;
     margin: 10% auto;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
 }
 
+.gameEndModal h1 {
+    font-size: 2em;
+}
+
 .solution {
     color: #ff004c;
     font-weight: bold;
     font-size: 0.8em;
+    text-transform: uppercase;
+    letter-spacing: 0.9px;
 }
