--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,49 @@
+
 body {
   background-color: #083e93;
+  min-height: 100%;
+  display:flex;
+  /* height:auto; */
 }
 
 #root {
+  max-width: 900px;
+  margin-bottom:10px;
+  text-align: center;
+  position: relative;
+  margin: 15px auto;
+  background-color: #083e93;
+}
+
+.mainApp {
   max-width: 1280px;
-  margin: 0 auto;
   margin-top:10px;
   margin-bottom:10px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 4rem;
   text-align: center;
   background-color: #ffde9a;
-  border-radius: 10px;
+  border-style: solid;
+  border-color: #e9a640 #e9a640 #c16937 #c16937;
+  border-width: thick;
+  border-radius: 5px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.appLogo {
+  top: 0px; /* Distance from the top */
+  width: auto;
+  height: auto; /* Keep the aspect ratio */
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.borderDiv {
+  background-color: #f9d971;
+  border-color: #c16937;
+  box-shadow: 1px 1px 1px #c16937;
+  border-radius: 2px;
 }
 
 .card {
@@ -59,6 +64,13 @@ body {
   margin-top: 5px;
   padding-left: 100px;
   padding-right: 100px;
+  margin-bottom: 10px;
+}
+
+.main_header {
+  font-family: "SDV_font";
+  margin-bottom:15px;
+  font-size: xx-large;
 }
 
 .searchBar {
